package tech.article.listener.v5;

import tech.article.listener.common.Configuration;

public interface ConfigurationListener {
    void onConfigurationChanged(Configuration configuration);
}
