@startuml
'https://plantuml.com/class-diagram

interface ConfigurationListener
class ConfigurationManager
class Configuration 
class Network
class NotificationBar
class Supervision

Network --|> ConfigurationListener
NotificationBar --|> ConfigurationListener
Supervision --|> ConfigurationListener


ConfigurationManager ..> Configuration
ConfigurationListener ..> Configuration
ConfigurationManager ..> ConfigurationListener

@enduml